# rlib

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Makefile  README.md  buildspec.yaml  c-with-class.h  cloudbuild.yaml  common.hpp  condition_variable.hpp  fake_cpp.h  fdset.hpp  fstr.h  functional.hpp  io.hpp  libr.cc  log.hpp  log_without_enum_class.hpp  macro.hpp  meta.hpp  opt.hpp  pool.hpp  print.hpp  rcolor.hpp  rstdafx.hpp  scope_guard.hpp  sio.hpp  stdio.hpp  stream.hpp  string.hpp  sys.hpp  terminal.hpp  test.cc  test.hpp  traits.hpp  utils.hpp
c/: fake_cpp.h
cmake/: CMakeLists.txt  rlib-config.cmake
impl/: traceable_list.hpp
require/: cxx11  cxx14  cxx17  cxx20
standalone-toys/: README.md  rdebug.h  rlib.min.hpp
string/: fstr.hpp  string.hpp
sys/: cc_list  compiler_detector  fd.hpp  os.hpp  sio.hpp  unix_handy.hpp
test/: Makefile  cclass.c  cclass.i  cclass.s  fstr.cc  fstr.hpp  linux.c  m.cc  meta.cc  opt.cc  print.cc  str  str.cc  test.sh
test/src/: _fd  cclass.c  common.cc  fstr.cc  functional.cc  header-include-all.cc  log.cc  meta.cc  opt.cc  os.cc  pool.cc  print.cc  print_performance.cc  repeat.cc  str.cc  string.cc  string_14  test.cc  threading.cc  wwEigen.cc
utils/: scope_guard.hpp
ww/: eigen.hpp
